force-app/main/default/objects/Capability_Role_Assignment__c/Capability_Role_Assignment__c.object-meta.xml
<CustomObject>
    <label>Capability Role Assignment</label>
    <pluralLabel>Capability Role Assignments</pluralLabel>
    <nameField>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
        <displayFormat>CRA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking Capabilities to Roles with allocation percentage</description>
</CustomObject>