force-app/main/default/objects/Capability_Role_Assignment__c/fields/Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Hours__c</fullName>
    <label>Allocated Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Capability__r.Estimated_Hours__c * Allocation_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Calculated: Capability hours × Allocation percentage</description>
</CustomField>