force-app/main/default/objects/Capability_Role_Assignment__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <label>Allocation Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>100</defaultValue>
    <description>Percentage of capability hours allocated to this role</description>
</CustomField>