force-app/main/default/objects/Capability_Role_Assignment__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <label>Capability</label>
    <type>MasterDetail</type>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Role Assignments</relationshipLabel>
    <relationshipName>Role_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>