force-app/main/default/objects/Capability_Role_Assignment__c/fields/Capability_Role__c.field-meta.xml
<CustomField>
    <fullName>Capability_Role__c</fullName>
    <label>Capability Role</label>
    <type>Lookup</type>
    <referenceTo>Capability_Role__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>